# rs_guard

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  acceptance-criteria.md  requirements.md  run_tests.sh  user-stories.md
.claude/agents/: git-commit-automator.md  rust-format-checker.md  yew-frontend-modifier.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: checker.rs  config.rs  encoder.rs  lib.rs  main.rs  metadata.rs  repair.rs  watcher.rs
backend/templates/: test_report.html
backend/tests/: api_tests.rs  run_tests.rs
backend/tests/bdd/: main.rs  mod.rs  steps.rs  utils.rs  world.rs
backend/tests/bdd/features/: api_status.feature  data_protection.feature  file_monitoring.feature
backend/tests/common/: assertions.rs  data_generator.rs  http_client.rs  mock_server.rs  mod.rs  report_generator.rs  test_environment.rs  utils.rs
backend/tests/fixtures/: mod.rs  test_configs.rs  test_data.rs  test_scenarios.rs
backend/tests/performance/: benchmark_suite.rs  concurrent_operations.rs  encoding_performance.rs  file_processing.rs  memory_usage.rs  mod.rs  response_time.rs
backend/tests/uat/: configuration.rs  data_integrity.rs  error_handling.rs  file_protection.rs  mod.rs  recovery.rs  web_interface.rs
config/: folders.toml
docs/: README_en.md  architecture.md  architecture_en.md  test-api-spec.md  test-architecture.md  test-tech-stack.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
shared/src/: lib.rs
tests/: bdd_simple.sh  integration_simple.rs
