[workspace]
resolver = "2"
members = [
    "backend",
    "frontend",
    "shared",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
shared = { path = "./shared" }

# BDD Testing Dependencies
cucumber = "0.21"
async-trait = "0.1"
tokio-test = "0.4"
mockall = "0.13"
fake = { version = "3.0", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
test-case = "3.3"
insta = { version = "1.40", features = ["json", "yaml"] } 