[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
tokio = { version = "1.38.0", features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
reed-solomon-erasure = "6.0.0"
rayon = "1.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8.0.0"
sled = "0.34" # An embedded database.
anyhow = "1.0"
thiserror = "2.0.12"
shared = { workspace = true }

# For serving static files from the frontend build
tower-http = { version = "0.6.6", features = ["fs"] }

rust-embed = "8.5.0"
axum-embed = { version = "0.7.0", features = ["rust-embed"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
serde_json = "1.0"
tempfile = "3.10"
